src/sections/home/styles/desktop/home-layout.css
#home {
	position: fixed;
	overflow: auto;
	height: auto;
	width: 100%;
	max-width: none;
	top: var(--block-size);
	bottom: 8px;

	--left-col-span: 7;
	--right-col-span: 10;
	--edge-gap: 1;
	--layout-width: calc(var(--right-col-span) * var(--block-size));
	--layout-left: calc((100vw - var(--layout-width)) / 2);
}
#home-content {
	position: relative;
	margin: 0;
	margin-left: var(--layout-left);
	width: var(--layout-width);
	max-width: var(--layout-width);
	padding-bottom: var(--block-size);
}
#home .screen {
	display: contents;
}
@media screen and (max-width: 1408px) {
	#home {
		position: static;
	}
}

